# Graphics

./: .gitattributes  .gitignore  .gitmodules  README.md  color fitting.cpp  filter-large-files.py  light2d.cpp
.libraries/: README.md
UI/: #.cpp  #stick3d.cpp  3d_reader.h  debug_font_rendering.h  ply_reader.h  ply_viewer.cpp  sticks.cpp  stl_encoder.h  stl_viewer.cpp  stroke_issue.stl  template_2d.cpp  template_3d.cpp  webgl_test.html
fitting/: #edge_detector.cpp  #points2implicit.cpp  Circle Fitting.cpp  Ellipse Fitting.cpp  Line Fitting.cpp  neural-earth.ipynb  parametric2bezier.cpp
image/: qt_editor_template.py
implicit/: marching_cube.cpp  quadtree.cpp
libraries/: README.md
light2d/: light2d (no recursion).cpp  light2d (path).cpp  light2d.cpp  light3d (debug).cpp  svg path.cpp
mapping/: __init__.py
mapping/sfm_calibrated/lc_solver/: CMakeLists.txt  fbow.cpp  test.py
mapping/sfm_global/ba_solver/: .gitignore  CMakeLists.txt  ba_solver.cpp
modeling/: .gitignore  index.py
numerical/: README.md  _debug_eigensystem.cpp  _debug_font_rendering.h  _debug_linearsystem.cpp  _debug_optimization.cpp  _debug_optimization_2d.cpp  _debug_rootfinding.cpp  eigensystem.h  geometry.h  integration.h  interpolation.h  linearsystem.h  ode.h  optimization.h  random.h  rootfinding.h
path/: Spline Tester.cpp  convex_hull_2d.h  polygon.h  polygon_h_debug.cpp  svg path v.cpp  svg path.cpp  svg tester.html  svg_path_read.h  torus_projection.html
raytracing/: #render_stl.cpp  brdf.h  bvh.h  bvh_ply.h  pathtracing_test.cpp  render_stl.cpp  xray_test.cpp
(+646 files in other folders)
